# ehr-utils-project-status

./: .gitignore  README.md  generate_report.sh  generate_reports.sh  github_client.py  latex_rendering.py  pr_state_machine.py  project_status.py  project_util.py  pyproject.toml  requirements.txt  sendMail.scpt  typst_rendering.py
.github/workflows/: report.yml
src/: github_client.py  latex_rendering.py  pr_state_machine.py  project_status.py  project_util.py  typst_rendering.py
